# AIWine

./: AIWine.sln  CMakeLists.txt  build.bat
AIWine/: AITypes.h  AIWine.cpp  AIWine.h  AIWine.vcxproj  AIWine.vcxproj.filters  Board.cpp  Board.h  Chess.cpp  Chess.h  ChessShape.cpp  ChessShape.h  HashTable.h  main.cpp
src/: AITypes.h  AIWine.cpp  AIWine.h  Board.cpp  Board.h  Chess.cpp  Chess.h  ChessShape.cpp  ChessShape.h  HashTable.h  main.cpp
